[package]
name = "IOKit-sys"
version = "0.1.2"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "FFI bindings for IOKit"
license = "MIT"
homepage = "https://github.com/dcuddeback/iokit-sys"
repository = "https://github.com/dcuddeback/iokit-sys"
readme = "README.md"
keywords = ["iokit", "system", "bindings", "hardware"]

links = "IOKit"
build = "build.rs"

[dependencies]
libc = "0.2"
mach = "0.0.4"
CoreFoundation-sys = "0.1.3"
